# vshell-translator

./: Cargo.toml  README.md
src/: configuration.rs  file.rs  main.rs
